# wiki-rag-agentic

./: Makefile  README.md
.github/workflows/: deploy-api.yml  deploy-indexer.yml  deploy-ingest.yml
api/: pyproject.toml
api/src/api/: agents.py  config.py  db.py  llm.py  main.py  models.py  retrieval.py
api/src/api/providers/: __init__.py
api/src/api/providers/embeddings/: factory.py
api/src/api/providers/llm/: base.py  bedrock_provider.py  factory.py  openai_provider.py
indexer/: Dockerfile  pyproject.toml
indexer/src/indexer/: embeddings.py  loader.py  settings.py  vectorstore.py
indexer/src/indexer/providers/: __init__.py  embeddings.py
ingest/: Dockerfile
ingest/conventions_wiki/: 01-principles.md  02-formatting-and-structure.md  03-naming.md  04-functions-and-classes.md  05-types-and-docstrings.md  06-errors-logging-and-testing.md  07-tooling-and-review.md  08-examples.md  README.md
ingest/src/ingest/: main.py
responses/with_evidence/: board.py  constants.py  game.py  main.py  test_minesweeper.py
responses/without_evidence/: minesweeper.py  test_minesweeper.py
scripts/: cleanup_ecr.sh  cleanup_s3_versioned.sh  deploy_api.sh  deploy_indexer.sh  deploy_ingest.sh  run_indexer.sh  run_ingest.sh
terraform/: README.md  ecs.tf  eventbridge.tf  iam.tf  locals.tf  logs.tf  outputs.tf  secrets.tf  variables.tf
