[project]
name = "wiki-rag-indexer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "llama-index>=0.10",
    "llama-index-embeddings-openai>=0.1",
    "llama-index-embeddings-bedrock>=0.1",
    "llama-index-vector-stores-postgres>=0.1",
    "psycopg2-binary>=2.9",
    "requests>=2.32"
]
